--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "gantt-task-react": "^0.3.9",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-gantt": "^2.1.8",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
