--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "classnames": "^2.5.1",
     "lucide-react": "^0.344.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "recharts": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
