--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.1"
   },
   "devDependencies": {
