--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-gantt": "^2.1.8",
     "react-router-dom": "^7.7.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
