--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
@@ -20,6 +22,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-paginate": "^8.3.0",
+    "react-pagination": "^1.0.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.1"
