--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "file-saver": "^2.0.5",
