--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.5.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-pagination": "^1.0.0",
