--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-pagination": "^1.0.0",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.1.1"
+    "recharts": "^3.1.1",
+    "svg-pathdata": "^8.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
