--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
+    "libphonenumber-js": "^1.12.22",
     "lucide-react": "^0.344.0",
     "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
@@ -26,10 +27,12 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-flags-select": "^2.5.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
     "react-pagination": "^1.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.1",
@@ -47,6 +50,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.19"
+    "vite": "^7.1.7"
   }
 }
