--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^7.7.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.1",
-    "svg-pathdata": "^8.0.0"
+    "svg-pathdata": "^8.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
