--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.21",
     "jspdf": "^3.0.1",
@@ -25,7 +26,7 @@
     "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-datepicker": "^8.5.0",
+    "react-datepicker": "^8.7.0",
     "react-day-picker": "^9.11.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
