--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "docs": "^0.3.2-canary.0",
+    "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.21",
     "jspdf": "^3.0.1",
