--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.21",
     "jspdf": "^3.0.1",
