manager monthly report

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "antd": "^5.28.1",
     "axios": "^1.11.0",
+    "chart": "^0.1.2",
+    "chart.js": "^4.5.1",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
@@ -29,6 +31,7 @@
     "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^8.8.0",
     "react-day-picker": "^9.11.0",
     "react-dnd": "^16.0.1",
