--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.13",
-    "antd": "^5.28.1",
+    "antd": "^5.29.1",
     "axios": "^1.13.2",
     "chart": "^0.1.2",
     "chart.js": "^4.5.1",
@@ -50,7 +50,8 @@
     "react-select": "^5.10.2",
     "react-spring": "^10.0.3",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.1.1",
+    "react-window": "^2.2.3",
+    "recharts": "^3.5.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "svg-pathdata": "^8.0.0",
@@ -70,10 +71,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-
     "vite": "^7.2.4"
-
-    
-
   }
 }
