--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart": "^0.1.2",
     "chart.js": "^4.5.1",
     "classnames": "^2.5.1",
+    "countries-and-timezones": "^3.8.0",
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
