--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^4.1.0",
     "docx": "^9.5.1",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "jspdf": "^3.0.4",
