--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.12.22",
     "lucide-react": "^0.344.0",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
