--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.7",
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.13",
     "antd": "^5.29.1",
     "axios": "^1.13.2",
@@ -45,6 +46,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-flags-select": "^2.5.0",
+    "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
@@ -59,7 +61,8 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "svg-pathdata": "^8.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
